--- a/V27/latex-template/lit.bib
+++ b/V27/latex-template/lit.bib
@@ -1,20 +1,5 @@
-@manual{sample,
-  author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014
-}
-
-@manual{lit,
-  date = {03.02.2021},
-  url = {https://physics.net.gov/PhysRefData/Xcom/html/xcom1.html}
-}
-
 @manual{alt,
   author = {TU Dortmund},
-  title = {Versuch V14: Tomographie mit Gamma­Strahlung},
+  title = {Altanleitung zum Versuch 27: Zeeman-Effekt},
 }
 
-@manual{leifi,
-  date = {04.02.2021},
-  url = {https://www.leifiphysik.de/kern-teilchenphysik/radioaktivitaet-fortfuehrung/versuche/gammaspektrum-von-cs-137}
-}
