--- a/V61/latex-template/lit.bib
+++ b/V61/latex-template/lit.bib
@@ -1,5 +1,19 @@
 @manual{alt,
   author = {TU Dortmund},
-  title = {Altanleitung zum Versuch 27: Zeeman-Effekt},
+  title = {Altanleitung zum Versuch V61: Der HeNe-Laser},
+  date = {18.02.2021},
+  url = {https://moodle.tu-dortmund.de/pluginfile.php/1278144/mod_resource/content/1/V61.pdf}
+}
+
+@manual{prozess,
+  title = {Ableitung der Planckschen Strahlungsformel nach Einstein},
+  date = {18.02.2021},
+  url = {https://www.uni-ulm.de/fileadmin/website_uni_ulm/nawi.inst.251/Didactics/quantenchemie/html/AbleitF.html}
+}
+
+@manual{Zeugs,
+  title = {Der Helium-Neon-Laser},
+  date = {18.02.2021},
+  url = {https://lp.uni-goettingen.de/get/text/1804}
 }
 
