--- a/V61/latex-template/main.tex
+++ b/V61/latex-template/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{Nr. 27}
-\title{Zeeman-Effekt}
+\subject{Nr. 61}
+\title{HeNe-Laser}
 \date{%
-  Durchführung: 22.02.2021
+  Durchführung: 16.02.2021
   \hspace{3em}
-  Abgabe: 30.02.2021
+  Abgabe: 20.02.2021
 }
 
 \begin{document}
