--- a/V61/latex-template/content/durchfuehrung.tex
+++ b/V61/latex-template/content/durchfuehrung.tex
@@ -1,132 +1,65 @@
 \section{Durchführung}
 \label{sec:Durchführung}
 
-Der Versuchsaufbau ist in Abbildung \ref{fig:aufbau} schematisch dargestellt.
-Eine Cadmium-Spektrallampe ist dem äußeren magnetischen Feld des Elektromagneten ausgesetzt.
-Der restliche optische Aufbau dient zur Analyse ihres Lichtes. Der Srahl wird senkrecht zur
-Magnetfeldrichtung kollimiert und trifft
-auf ein Geradsichtprisma, welches das Spektrum räumlich nach den Wellenlängen auflöst.
-Über den zweiten Spalt kann eine Spektrallinie ausgewählt werden und der Polarisationsfilter
-filtert eine zu untersuchende Polarisation dieser Linie heraus.
+\subsection{Aufbau}
 
-\vspace{-5pt}
+Der Aufbau des Versuchs ist in Abbildung \ref{fig:aufbau} dargestellt. 
+
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.3]{content/aufbau.png}
-    \caption{Versuchsaufbau der Messung \cite{alt}.}
+    \includegraphics[scale=0.5]{content/aufbau.png}
+    \caption{Darstellung des Aufbaus. \cite{alt}}
     \label{fig:aufbau}
 \end{figure}
 
-Für Cadmium sind im wesentlichen zwei Spektrallininen zu beobachten - eine rote und eine blaue.
-Anhand der roten Linie soll der normale Zeeman-Effekt und anhand der blauen der anormale 
-Zeeman-Effekt untersucht werden. 
-
-Die Wellenlängen $\lambda$ der einzelnen Spektrallinien können mithilfe der Lummer-Gehrcke-Platte 
-bestimmt werden, indem ihr Interferenzverhalten verschiedener teilreflektierter Strahlen
-analysiert wird. Konstruktive Interferenz tritt auf, sobald die Bragg-Bedingung
-
-\vspace{-5pt}
-\begin{equation}
-    2 \cdot d \cdot \text{cos}(\beta) = n \cdot \lambda \: , 
-    \qquad n = \frac{\text{sin}(\alpha)}{\text{sin}(\beta)}
-\end{equation}
-
-mit der Plattendicke $d$ und dem Brechungsindex $n$ erfüllt ist.
-Mit eingeschaltetem Magnetfeld verschieben sich die Wellenlängen der 
-optischen Übergänge um $\partial \lambda$ und daraus resultierend
-die Interferenzmaxima um $\partial s$.
-Die maximale Differenz, die zwischen den Wellenlängen zweier Strahlen bestehen darf,
-ohne dass sie sich überlagen sollen, ist definiert als Dispersionsgebiet
-
-\vspace{-20pt}
-\begin{equation}
-    \Delta \lambda_\text{D} = \frac{\lambda^2}{2d} \sqrt{\frac{1}{n^2-1}}\: .
-    \label{eqn:lam}
-\end{equation}
-
-Das Auflösungsvermögen der Platte lässt sich dann als
-
-\vspace{-5pt}
-\begin{equation}
-    A = \frac{\lambda}{\Delta \lambda_\text{D}} = \frac{L}{\lambda} (n^2 -1)
-    \label{eqn:a}
-\end{equation}
-
-bestimmen, wobei $L$ die Plattenlänge angibt.
-Zur Eichung des Elektromagneten wird die Hysterese des Magnetfeldes $\vec{B}$ in Abhängigkeit
-des Feldstromes $I$ gemessen. Schließlich werden zur Bestimmung der Zeeman-Aufspaltung der
-Wellenlängen die Interferenzbilder beider Spektrallinien mithilfe einer Digitalkamera
-für die verschiedenen gefilterten Polarisationen aufgenommen. Damit ist auch 
-eine Berechnung der Landé-Faktoren möglich.
-
-\section{Vorbereitungsaufgaben}
-
-\subsection{Dispersionsgebiet und Auflösungsvermögen der Lummer-Gehrcke-Platte}
-
-Nach den Gleichungen \eqref{eqn:lam} und \eqref{eqn:a} lassen sich mithilfe
-der Angaben $L = \SI{0.12}{\meter}$, $d = \SI{4}{\milli\meter}$, $n_\text{rot} = \num{1.4567}$
-$n_\text{blau} = \num{1.4635}$ die Dispersionsgebiete und Auflösungsvermögen der beiden 
-Spektrallinien berechnen zu
-
-\vspace{-15pt}
-\begin{align*}
-    \lambda_\text{rot} &= \SI{643.8}{\nano\meter}: & \Delta \lambda_\text{D,rot} &= \SI{48.91}{\pico\meter}\:, & A_\text{rot} &= \num{208749}\:, \\
-    \lambda_\text{blau} &= \SI{480}{\nano\meter}: & \Delta \lambda_\text{D,blau} &= \SI{27.0}{\pico\meter}\:, & A_\text{blau} &= \num{285458}\:. 
-\end{align*}
-
-\subsection{Termschemata zu den Spektrallinien}
+Die Justage wird mit Hilfe eines vorinstallierten Justierlasers ($\lambda = \SI{532}{\nano\metre}$, 
+$P_\text{max} = \SI{1}{\milli\watt}$, $P_\text{grün} = \SI{0.2}{\milli\watt}$) durchgeführt. Die Maße des Laserrohrs liegen dabei 
+für die Länge bei $l = \SI{408}{\nano\metre}$ und für den Durchmesser bei $\SI{1.1}{\milli\metre}$. Dieses ist mit dem HeNe-Gasgemisch 
+im Verhältnis 5:1 gefüllt und mit Elektroden versehen, sodass mittels Entladung die Besetzungsinversion stattfinden kann. An den 
+Enden des Laserrohrs befindet sich jeweils ein Brewster-Fenster, das dafür sorgt, dass eine definierte Polarisationsrichtung mit 
+möglichst wenig Verlusten erreicht wird. Das Prinzip des Brewster-Fensters ist in Abbildung \ref{fig:brewster} zu sehen. 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.6]{content/Zeeman.pdf}
-    \caption{Die Termschemata der möglichen optischen Übergänge.}
-    \label{fig:term}
+    \includegraphics[scale=0.5]{content/brewster.png}
+    \caption{Strahlengang am Brewster-Fenster. \cite{Zeugs}}
+    \label{fig:brewster}
 \end{figure}
 
-Die beiden Cadmium-Spektrallinien entsprechen Übergängen zwischen Zuständen verschiedener Elektronenkonfigurationen.
-Dabei entspricht die rote Linie den Übergängen $^1P_1 \leftrightarrow ^3S_1$ und die 
-blaue den Übergängen $^3S_1 \leftrightarrow ^3P_1$.\\
+Für den Resonator stehen konkave oder planparallele Spiegel zur Verfügung. 
 
-Die zugehörigen Quantenzahlen und daraus nach Gleichung \eqref{eqn:lande} berechneten Landé-Faktoren $g_J$ der
-verschiedenen Zustände sind in Tabelle \ref{tab:lande} aufgezeigt. 
-Die Aufspaltungen der Zeeman-Linien $\Delta E = g_{kl} \mu_\text{B} |\vec{B}|$ können nach Gleichung \eqref{eqn:anorm} und mit der 
-Kurzschreibweise $g_{kl} = m_k g_k - m_l g_l$ bestimmt werden und sind für ausgewählte Niveaus in Tabelle \ref{tab:ueber} aufgelistet.
-Schließlich sind die Termschemata der beiden Spektrallinien in Abbildung \ref{fig:term} dargestellt.
+\subsection{Durchführung}
 
-\vspace{-10pt}
-\begin{table}[H]
-    %\footnotesize
-    \centering
-    \caption{Quantenzahlen und Landé-Faktoren der Zustände.}
-    \vspace{-5pt}
-    \label{tab:lande}
-    \begin{tabular}{c|ccc|c}
-        \hline 
-        Zustand & $L$ & $S$ & $J$ & $g_J$ \\
-        \hline
-        \hline
-        $^1P_1$ & $1$ & $0$ & $1$ & $1$ \\
-        $^1D_2$ & $2$ & $0$ & $2$ & $1$ \\
-        $^3S_1$ & $0$ & $1$ & $1$ & $2$ \\ 
-        $^3P_1$ & $1$ & $1$ & $1$ & $\sfrac{3}{2}$ \\
-        \hline 
-    \end{tabular}
-\end{table}
+Zunächst muss der Aufbau justiert werden. Dazu werden Laserrohr und Resonatorspiegel auf die Band gestellt und mittels des grünen
+Justierlasers so ausgerichtet, dass die Rückreflexe der beiden Spiegel jeweils auf das Fadenkreuz der Justierblende treffen. 
+Anschließend wird der Justierlaser abgestellt und die Hochspannung auf $\SI{6.5}{\milli\ampere}$ gestellt. 
+Falls nicht direkt eine Lasertätigkeit einsetzt, muss vorsichtig an den Justierschrauben der Resonatorspiegel nachjustiert werden.
 
-\begin{table}[H]
-    %\footnotesize
-    \centering
-    \caption{Energieniveauunterschiede für ausgeählte Anfangsniveaus mit $m_1$ und\\ optische Übergänge mit $\Delta m$.}
-    \vspace{-5pt}
-    \label{tab:ueber}
-    \begin{tabular}{c|ccc}
-         & $\Delta m = -1$ & $\Delta m = 0$ & $\Delta m = +1$ \\
-        \hline
-        rot                 & $-\mu_\text{B}B$              & 0                             & $\mu_\text{B}B$               \\
-        blau, $m_1 = +1$    & $\sfrac{3}{2} \mu_\text{B}B$  & $-\sfrac{1}{2}\mu_\text{B}B$  & -                             \\
-        blau, $m_1 = 0$     & $2\mu_\text{B}B$              & 0                             & $-2\mu_\text{B}B$             \\ 
-        blau, $m_1 = -1$    & -                             & $\sfrac{1}{2}\mu_\text{B}B$   & $-\sfrac{3}{2}\mu_\text{B}B$  \\
-    \end{tabular}
-\end{table}
+\subsubsection{Untersuchen der Stabilitätsbedingung}
 
+Um die Stabilitätsbedingung zu untersuchen wird die Resonatorlänge in ungefähr $\SI{4}{\centi\metre}$ erhöht und jeweils die
+Intensität mittels einer Photodiode gemessen. Dabei muss der Laser gegebenenfalls nach jeder Verschiebung der Spiegel nachjustiert
+werden. Diese Messung wird für einen Resonator mit konkaven Spiegeln und einem Resonator mit einem konkaven und einem planparallelen
+Spiegel durchgeführt.
 
+\subsubsection{Multimodenbetrieb untersuchen}
+
+Um den Multimodenbetrieb zu untersuchen, werden die Schwebefrequenzen vermessen. Dabei wird die Frequenz mittels einer schnellen 
+Photodiode (Bandbreite bis $\SI{1}{\giga\hertz}$) gemessen und mittels eines Spektrumanalysators die Fourierspektren für 
+unterschiedliche Resonatorlängen untersucht. 
+
+\subsubsection{Bestimmung der Wellenlänge}
+
+Zur Bestimmung der Wellenlänge werden unterschiedliche Gitter in den Strahlengang gestellt und der Abstand zwischen den Beugungsmaxima
+mittels eines Zollstocks vermessen. 
+
+\subsubsection{Bestimmung der Polarisation}
+
+Um die Polarisation zu bestimmen, wird ein Polarisator hinter den Auskoppelspiegel gestellt. Die Polarisationsrichtung wird dann 
+in $\SI{10}{\degree}$ geändert und jeweils die Intensität mittels einer Photodiode gemessen. 
+
+\subsubsection{Untersuchen der $TEM$-Moden}
+
+Zur Unterdrückung der Grundmode wird ein Wolframdraht der Dicke $d = \SI{0.005}{\milli\metre}$ zwischen Laserrohr und Resonatorspiegel
+gebracht. Der Laserstrahl wird dann mittels einer Zerstreulinse aufgeweitet, sodass auf dem optischen Schirm dann verschiedene Moden
+zu erkennen sein sollten. Die Intensität wird mittels einer Photodiode gemessen. 
