--- a/V61/latex-template/content/diskussion.tex
+++ b/V61/latex-template/content/diskussion.tex
@@ -1,2 +1,96 @@
+\vspace{150pt}
+
 \section{Diskussion}
 \label{sec:Diskussion}
+
+
+\subsection{Stabilitätsbedingung}
+
+Die experimentell gemessenen maximalen Resonatorlängen
+
+\vspace{-15pt}
+\begin{align*}
+    \text{  plan + konkav:} \qquad L_\text{pk,theo} &= \SI{1.4}{\meter} \: ,\\
+    \text{konkav + konkav:} \qquad L_\text{kk,theo} &= \SI{2.8}{\meter}
+\end{align*}
+
+weichen um $\SI{40.43}{\percent}$ und $\SI{64.18}{\percent}$ von den theoretischen 
+
+\vspace{-15pt}
+\begin{align*}
+    \text{  plan + konkav:} \qquad L_\text{pk,exp} &= \SI{0.834}{\meter} \: ,\\
+    \text{konkav + konkav:} \qquad L_\text{kk,exp} &= \SI{1.003}{\meter} \: 
+\end{align*}
+
+ab. Die Abweichungen rühren aus einem systematischem Fehler.
+Die Nachjustierung wurde nicht ausreichend durchgeführt.
+Dies führte zu einem Fehlschluss, die Stabilitätsbedingung sei nicht mehr erfüllt.
+Eine Kontrolle mit den Theoriewerten zeigt jedoch, dass die Resonatoren jeweils
+auch doppel so lang noch stabil wären.
+
+\subsection{Wellenlänge}
+
+Die Wellenlänge wurde experimentell zu
+
+\vspace{-5pt}
+\begin{equation*}
+    \bar{\lambda} = \SI{658 +- 34}{\nano\meter}
+\end{equation*}
+
+bestimmt und weicht um $\SI{3.98}{\percent}$ vom Theoriewert
+
+\vspace{-5pt}
+\begin{equation*}
+    \bar{\lambda} = \SI{632.8}{\nano\meter}
+\end{equation*}
+
+aus Abbildung \ref{fig:pump} ab. Die Abweichung ist trotz Messunsicherheiten der
+Abmessungen der Versuchsgeometrie und einer nicht idealen Orthogonalität zwischen
+Schirm und optischer Achse sehr gering.
+
+\subsection{Transversale Moden}
+
+Die TEM$_{00}$-Grundmode war wesentlich leichter zu vermessen als die TEM$_{01}$-Mode,
+da der Draht durch leichte Bewegungen den Laser häufiger unterbrach.
+Auch passen die Messergebnisse der Grundmode gut zur theoretischen Gaußverteilung,
+während für die Mode höherer Ordnung ein sehr kleines Photosignal nur ungenau 
+gemessen werden konnte. Kleine Änderungen der umgebenden Lichteinstrahlung 
+konnten die Messung leicht beeinflussen. Daher weichen die Daten stärker
+von der theoretischen Verteilung ab.
+
+\subsection{Polarisation}
+
+Der in Abbildung \ref{fig:pol} zu sehende periodische Verlauf
+der gemessenen Intensität entspricht der Erwartung einer Periodizität von $2\pi$.
+Die konstante Phasenverschiebung resultiert aus der nicht perfekt parallelen Ausrichtung
+des Lasers. Weiterhin ist die ungenaue Messung des Photostroms eine weitere Fehlerquelle.
+
+\subsection{Longitudinale Moden}
+
+Die Abweichungen der gemittelten Modenabstände betragen
+
+\vspace{-15pt}
+\begin{align*}
+    L = \SI{ 69.2}{\centi\meter}: \quad \bar{\Delta f} &= \SI{215.5}{\mega\hertz} & &\SI{0.51}{\percent}\, , \\  
+    L = \SI{ 84.8}{\centi\meter}: \quad \bar{\Delta f} &= \SI{174.5}{\mega\hertz} & &\SI{1.28}{\percent}\, , \\  
+    L = \SI{100.3}{\centi\meter}: \quad \bar{\Delta f} &= \SI{150}{\mega\hertz}   & &\SI{0.36}{\percent}\, ,  
+\end{align*}
+
+von den theoretisch Werten
+
+\vspace{-15pt}
+\begin{align*}
+    L &= \SI{ 69.2}{\centi\meter}: & \Delta f_\text{theo} &= \SI{216.61}{\mega\hertz}\, , \\  
+    L &= \SI{ 84.8}{\centi\meter}: & \Delta f_\text{theo} &= \SI{176.76}{\mega\hertz}\, , \\  
+    L &= \SI{100.3}{\centi\meter}: & \Delta f_\text{theo} &= \SI{149.46}{\mega\hertz}\, .  
+\end{align*}
+
+und sind nur sehr geringfügig.
+Die Doppler-Verbreiterung der dominanten Frequenz des Neon-Übergang konnte zu
+
+\begin{equation}
+    \partial f_D = \frac{2f_0}{c} \sqrt{\frac{2RT\: \text{ln}(2)}{M}} = \SI{1314}{\mega\hertz}
+\end{equation}
+
+berechnet werden und enthält damit für die untersuchten Resonatorlängen 
+die Frequenzen von $6$, $7,5$ oder fast $9$ Moden.
