--- a/V61/latex-template/lit.bib
+++ b/V61/latex-template/lit.bib
@@ -17,3 +17,11 @@
   url = {https://lp.uni-goettingen.de/get/text/1804}
 }
 
+@book{spektro,
+    author = {Demtröder, Wolfgang},
+    title = {Laserspektroskopie 1},
+    year = {2011},
+    publisher = {Springer-Verlag},
+    series = {6. Auflage}
+}
+
